tests not working?